tests/build/fixtures/invalid-syntax/qmlts.config.ts
throw new SyntaxError('Fixture config intentionally fails during evaluation');

export default {};
